move deprecated impls from PathResource down to Resource + fix some tests
Signed-off-by: Ludovic Orban <lorban@bitronix.be>